Fix background color not covering the whole page when content doesn't cover the whole page

--- a/src/static/css/styles/base.css
+++ b/src/static/css/styles/base.css
@@ -38,7 +38,7 @@ button {
 }
 
 @media (prefers-color-scheme: dark) {
-    body {
+    html, body {
         background-color: #120325;
         color: #fff;
     }
